WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
41964
[chromium] popup menu should have the capability of showing labels
https://bugs.webkit.org/show_bug.cgi?id=41964
Summary
[chromium] popup menu should have the capability of showing labels
Jay Civelli
Reported
2010-07-09 10:19:04 PDT
For the Chromium autofill related feature, we need the PopupMenuChromium to be able to display a custom label on the right side for each entry.
Attachments
Initial patch
(12.81 KB, patch)
2010-07-09 10:47 PDT
,
Jay Civelli
no flags
Details
Formatted Diff
Diff
Fixed style issues
(12.36 KB, patch)
2010-07-09 16:58 PDT
,
Jay Civelli
tkent
: review-
Details
Formatted Diff
Diff
Fixing Mac build
(12.34 KB, patch)
2010-07-12 10:58 PDT
,
Jay Civelli
tkent
: review-
Details
Formatted Diff
Diff
Changed AutoFillPopupMenuClient::convertListIndexToInternalIndex to return a signed int
(12.30 KB, patch)
2010-07-12 17:16 PDT
,
Jay Civelli
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Jay Civelli
Comment 1
2010-07-09 10:47:54 PDT
Created
attachment 61060
[details]
Initial patch
WebKit Review Bot
Comment 2
2010-07-09 16:48:11 PDT
Attachment 61060
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebKit/chromium/src/AutoFillPopupMenuClient.cpp:280: Place brace on its own line for function definitions. [whitespace/braces] [4] WebCore/platform/chromium/PopupMenuChromium.cpp:915: One line control clauses should not use braces. [whitespace/braces] [4] WebCore/platform/chromium/PopupMenuChromium.cpp:961: One line control clauses should not use braces. [whitespace/braces] [4] Total errors found: 3 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Eric Seidel (no email)
Comment 3
2010-07-09 16:55:59 PDT
Attachment 61060
[details]
did not build on mac: Build output:
http://webkit-commit-queue.appspot.com/results/3507040
Jay Civelli
Comment 4
2010-07-09 16:58:49 PDT
Created
attachment 61115
[details]
Fixed style issues
Eric Seidel (no email)
Comment 5
2010-07-09 17:09:02 PDT
Attachment 61115
[details]
did not build on mac: Build output:
http://webkit-commit-queue.appspot.com/results/3488087
Kent Tamura
Comment 6
2010-07-12 03:02:12 PDT
Comment on
attachment 61115
[details]
Fixed style issues The code looks OK. Please fix the build error: /Users/eseidel/Projects/MacEWS/WebKitBuild/WebCore.build/Release/WebCore.build/Objects-normal/i386/RenderTextControlSingleLine.o cc1plus: warnings being treated as errors /Users/eseidel/Projects/MacEWS/WebCore/rendering/RenderTextControlSingleLine.cpp:879: warning: unused parameter 'listIndex' distcc[99406] ERROR: compile /Users/eseidel/Projects/MacEWS/WebCore/rendering/RenderTextControlSingleLine.cpp on localhost failed WebCore/platform/chromium/PopupMenuChromium.cpp:73 + static const int kTextToLabelPadding = 10; nit: We don't prepend 'k' prefix to constant value symbols. This change is ok for consistency.
Jay Civelli
Comment 7
2010-07-12 10:58:54 PDT
Created
attachment 61245
[details]
Fixing Mac build
Kent Tamura
Comment 8
2010-07-12 16:27:09 PDT
Comment on
attachment 61245
[details]
Fixing Mac build WebKit/chromium/src/AutoFillPopupMenuClient.cpp:70 + if (index == -1) I don't think this code works. A compiler warns "signed vs. unsigned" and removes the code by optimization. convertListIndexToInternalIndex() should return signed int.
Jay Civelli
Comment 9
2010-07-12 17:16:54 PDT
Created
attachment 61298
[details]
Changed AutoFillPopupMenuClient::convertListIndexToInternalIndex to return a signed int
Kent Tamura
Comment 10
2010-07-12 18:28:02 PDT
Comment on
attachment 61298
[details]
Changed AutoFillPopupMenuClient::convertListIndexToInternalIndex to return a signed int OK.
WebKit Commit Bot
Comment 11
2010-07-12 23:41:25 PDT
Comment on
attachment 61298
[details]
Changed AutoFillPopupMenuClient::convertListIndexToInternalIndex to return a signed int Clearing flags on attachment: 61298 Committed
r63179
: <
http://trac.webkit.org/changeset/63179
>
WebKit Commit Bot
Comment 12
2010-07-12 23:41:30 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 13
2010-07-13 00:39:57 PDT
http://trac.webkit.org/changeset/63179
might have broken Chromium Win Release The following changes are on the blame list:
http://trac.webkit.org/changeset/63178
http://trac.webkit.org/changeset/63179
http://trac.webkit.org/changeset/63180
http://trac.webkit.org/changeset/63181
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug