2010-07-12  Jay Civelli  <jcivelli@chromium.org>

Reviewed by Kent Tamura.

        Adding right aligned text called labels to PopupMenus.
        https://bugs.webkit.org/show_bug.cgi?id=41964

        * platform/PopupMenuClient.h:
        * platform/chromium/PopupMenuChromium.cpp:
        (WebCore::PopupListBox::paintRow):
        * rendering/RenderMenuList.cpp:
        (WebCore::RenderMenuList::itemLabel):
        * rendering/RenderMenuList.h:
        * rendering/RenderTextControlSingleLine.cpp:
        (WebCore::RenderTextControlSingleLine::itemLabel):
        * rendering/RenderTextControlSingleLine.h:
2010-07-12  Jay Civelli  <jcivelli@chromium.org>

        Reviewed by Kent Tamura.

        Making the autofill popup use labels to show the label
        associated with an item.
        https://bugs.webkit.org/show_bug.cgi?id=41964

        * src/AutoFillPopupMenuClient.cpp:
        (WebKit::AutoFillPopupMenuClient::getSuggestion):
        (WebKit::AutoFillPopupMenuClient::getLabel):
        (WebKit::AutoFillPopupMenuClient::itemLabel):
        (WebKit::AutoFillPopupMenuClient::setSuggestions):
        (WebKit::AutoFillPopupMenuClient::convertListIndexToInternalIndex):
        * src/AutoFillPopupMenuClient.h:

Canonical link: https://commits.webkit.org/54035@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63179 268f45cc-cd09-0410-ab3c-d52691b4dbfc