WebCore/rendering/RenderMenuList.h
@@ -82,6 +82,7 @@ private:
 
     // PopupMenuClient methods
     virtual String itemText(unsigned listIndex) const;
+    virtual String itemLabel(unsigned listIndex) const;
     virtual String itemToolTip(unsigned listIndex) const;
     virtual String itemAccessibilityText(unsigned listIndex) const;
     virtual bool itemIsEnabled(unsigned listIndex) const;
