WebCore/rendering/RenderTextControlSingleLine.h
@@ -115,6 +115,7 @@ private:
     virtual void selectionChanged(unsigned, bool) {}
     virtual void selectionCleared() {}
     virtual String itemText(unsigned listIndex) const;
+    virtual String itemLabel(unsigned listIndex) const;
     virtual String itemToolTip(unsigned) const { return String(); }
     virtual String itemAccessibilityText(unsigned) const { return String(); }
     virtual bool itemIsEnabled(unsigned listIndex) const;
