WebKit/chromium/src/AutoFillPopupMenuClient.h
@@ -57,6 +57,9 @@ public:
     // Returns the suggestion at |listIndex|.
     virtual WebString getSuggestion(unsigned listIndex) const;
 
+    // Returns the label at |listIndex|.
+    virtual WebString getLabel(unsigned listIndex) const;
+    
     // Removes the suggestion at |listIndex| from the list of suggestions.
     virtual void removeSuggestionAtIndex(unsigned listIndex);
 
@@ -65,6 +68,7 @@ public:
     virtual void selectionChanged(unsigned, bool);
     virtual void selectionCleared();
     virtual WebCore::String itemText(unsigned listIndex) const;
+    virtual WebCore::String itemLabel(unsigned listIndex) const;
     virtual WebCore::String itemToolTip(unsigned lastIndex) const { return WebCore::String(); }
     virtual WebCore::String itemAccessibilityText(unsigned lastIndex) const { return WebCore::String(); }
     virtual bool itemIsEnabled(unsigned listIndex) const { return true; }
@@ -104,6 +108,10 @@ public:
     void setAutocompleteMode(bool enabled) { m_AutocompleteModeEnabled = enabled; }
 
 private:
+    // Convert the specified index from an index into the visible list (which might
+    // include a separator entry) to an index to |m_names| and |m_labels|.
+    // Returns -1 if the given index points to the separator.
+    int convertListIndexToInternalIndex(unsigned) const;
     WebViewImpl* getWebView() const;
     WebCore::HTMLInputElement* getTextField() const { return m_textField.get(); }
     WebCore::RenderStyle* textFieldStyle() const;
